Move release specific variables to secrets.env
Following variable are now read from secrets.env and defined at preprocessor level to .cpp files
- API_KEY
- API_SERVER
- API_PATH
- API_PORT

--- a/arduino-megaatmega2560/platformio.ini
+++ b/arduino-megaatmega2560/platformio.ini
@@ -19,11 +19,17 @@ lib_deps =
 	bogde/HX711@^0.7.5
 
 [env:release]
-build_flags = -Drelease -Dapi_key=${sysenv.api_key}
+build_flags =
+	-D release
+	-D API_KEY="${sysenv.API_KEY}"
+	-D API_SERVER="${sysenv.API_SERVER}"
+	-D API_PATH="${sysenv.API_PATH}"
+	-D API_PORT="${sysenv.API_PORT}"
 lib_deps = 
     ${env.lib_deps}
 	adafruit/DHT sensor library@^1.4.6
 	bblanchon/ArduinoJson@^6.21.3
 
 [env:calibrate]
-build_flags = -Dcalibrate
+build_flags =
+	-D calibrate
