Change PlatformIO config for using secrets
secrets are now available as extra configs and platformio builds will use them.
Environment manipulation is no longer necessary.

--- a/arduino-megaatmega2560/.gitignore
+++ b/arduino-megaatmega2560/.gitignore
@@ -7,5 +7,5 @@
 .vscode/launch.json
 .vscode/ipch
 
-# secrets for build env
-secrets.env
+# stores sensitive info that will be available to platformio directly
+/*.secret.ini
