--- a/arduino-megaatmega2560/platformio.ini
+++ b/arduino-megaatmega2560/platformio.ini
@@ -10,22 +10,23 @@
 
 [platformio]
 default_envs = release
+extra_configs = api_config.secret.ini
 
 [env]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = 
+lib_deps =
 	bogde/HX711@^0.7.5
 
 [env:release]
 build_flags =
 	-D release
-	-D API_KEY="${sysenv.API_KEY}"
-	-D API_SERVER="${sysenv.API_SERVER}"
-	-D API_PATH="${sysenv.API_PATH}"
-	-D API_PORT="${sysenv.API_PORT}"
-lib_deps = 
+	-D API_KEY="${api.key}"
+	-D API_SERVER="${api.server}"
+	-D API_PATH="${api.path}"
+	-D API_PORT="${api.port}"
+lib_deps =
     ${env.lib_deps}
 	adafruit/DHT sensor library@^1.4.6
 	bblanchon/ArduinoJson@^6.21.3
