Fix preprocessor using build flag definitions as identifiers

--- a/arduino-megaatmega2560/platformio.ini
+++ b/arduino-megaatmega2560/platformio.ini
@@ -22,9 +22,9 @@ lib_deps =
 [env:release]
 build_flags =
 	-D release
-	-D API_KEY="${api.key}"
-	-D API_SERVER="${api.server}"
-	-D API_PATH="${api.path}"
+	-D API_KEY="\"${api.key}\""
+	-D API_SERVER="\"${api.server}\""
+	-D API_PATH="\"${api.path}\""
 	-D API_PORT="${api.port}"
 lib_deps =
     ${env.lib_deps}
