Add GSM configs to platformio

--- a/arduino-megaatmega2560/platformio.ini
+++ b/arduino-megaatmega2560/platformio.ini
@@ -10,7 +10,9 @@
 
 [platformio]
 default_envs = release
-extra_configs = api_config.secret.ini
+extra_configs =
+	api_config.secret.ini
+	gsm_config.secret.ini
 
 [env]
 platform = atmelavr
@@ -26,6 +28,9 @@ build_flags =
 	-D API_SERVER="\"${api.server}\""
 	-D API_PATH="\"${api.path}\""
 	-D API_PORT="${api.port}"
+	-D GSM_APN="\"${gsm.apn}\""
+	-D GSM_USER="\"${gsm.user}\""
+	-D GSM_PASSWORD="\"${gsm.password}\""
 lib_deps =
     ${env.lib_deps}
 	adafruit/DHT sensor library@^1.4.6
