Add arduinoFFT to release deps

--- a/arduino-megaatmega2560/platformio.ini
+++ b/arduino-megaatmega2560/platformio.ini
@@ -35,6 +35,7 @@ lib_deps =
     ${env.lib_deps}
 	adafruit/DHT sensor library@^1.4.6
 	bblanchon/ArduinoJson@^6.21.3
+	kosme/arduinoFFT@^1.6.1
 
 [env:calibrate]
 build_flags =
